# grid nerds: fix - overflow by text for block about

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,7 @@ h4 {
   margin-bottom: 10px;
   padding-top: 50px;
   padding-bottom: 20px;
+  overflow: hidden;
 
   border-bottom: 2px solid #eeeeee;
 }
@@ -704,6 +705,7 @@ h4 {
   min-height: 100px;
   padding-top: 35px;
   padding-bottom: 22px;
+  overflow: hidden;
 
   border-bottom: 2px solid #eeeeee;
 }
